@@ -47,17 +47,13 @@ Use source code generation to adapt annotated REST controllers `@Path, @Get, @Po
 </dependency>
 ```
 
-### JDK 22+
+### JDK 23+
 
-In JDK 22+, annotation processors are disabled by default, you will need to add a flag to re-enable.
+In JDK 23+, annotation processors are disabled by default, you will need to add a flag to re-enable.
 ```xml
-<plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-compiler-plugin</artifactId>
-  <configuration>
-    <compilerArgument>-proc:full</compilerArgument>
-  </configuration>
-</plugin>
+<properties>
+  <maven.compiler.proc>full</maven.compiler.proc>
+</properties>
 ```
 
 ## Define a Controller (These APT processors work with both Java and Kotlin)
